Fixed bugs on guest, payment controller for faster responses
